--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Author: Rafael Chávez Santiago
 Maintainer: The package maintainer <rafaelchavezsantiago@ciencias.unam.mx>
 Description: Changing to the description.
     Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 URL: https://github.com/rafael41800/MiPrimerLibreriaEnRByRCS
