--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,6 @@ Encoding: UTF-8
 LazyData: true
 URL: https://github.com/rafael41800/MiPrimerLibreriaEnRByRCS
 BugReports: https://github.com/rafael41800/MiPrimerLibreriaEnRByRCS/issues
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
